--- a/app/src/main/res/layout/box_recycler_single_layout.xml
+++ b/app/src/main/res/layout/box_recycler_single_layout.xml
@@ -22,6 +22,11 @@
             android:layout_gravity="bottom"
             android:background="#D2D2D2" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+
         <TextView
             android:id="@+id/tvBoxNumber"
             android:layout_width="wrap_content"
@@ -43,6 +48,8 @@
             android:textColor="#676767"
             android:textFontWeight="400"
             android:textSize="10sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
