--- a/app/src/main/res/layout/fragment_ship_within_india.xml
+++ b/app/src/main/res/layout/fragment_ship_within_india.xml
@@ -52,7 +52,7 @@
                                 android:layout_width="39dp"
                                 android:layout_height="39dp"
                                 android:layout_marginLeft="18dp"
-                                android:src="@drawable/ic_personal_shopper" />
+                                android:src="@drawable/ic_self_shopper" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -333,7 +333,8 @@
 
                             <RadioButton
                                 android:layout_width="26dp"
-                                android:layout_height="22dp"/>
+                                android:layout_height="22dp"
+                                android:buttonTint="#3A5FD8"/>
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
