--- a/app/src/main/res/layout/fragment_thank_you.xml
+++ b/app/src/main/res/layout/fragment_thank_you.xml
@@ -177,7 +177,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_marginHorizontal="15dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="4dp">
 
@@ -212,9 +212,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
-                            android:text="Get Rs. 500 cashback when your
-friend’s first package arrives at
-our warehouse"
+                            android:text="@string/get_rs_500_cashback_when_your_friend_s_first_package_arrives_at_our_warehouse"
                             android:textColor="#766565"
                             android:textFontWeight="600"
                             android:textSize="9sp" />
@@ -239,10 +237,69 @@ our warehouse"
 
             </com.google.android.material.card.MaterialCardView>
 
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="18dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="4dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Looks like you’ve added products only from Amazon.in"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:textFontWeight="600"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Shop more to save more"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:textFontWeight="500"/>
+
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150dp"
+                            android:layout_height="134dp"
+                            android:src="@mipmap/amazon_card"/>
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:layout_margin="12dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="18dp"
                 android:background="@mipmap/wtsp"
                 android:gravity="center_vertical"
                 android:paddingVertical="10dp">
@@ -385,7 +442,7 @@ our warehouse"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginHorizontal="5dp"
-                    android:src="@mipmap/twitter" />
+                    android:src="@mipmap/youtube" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/linkedin"
