--- a/app/src/main/res/layout/order_updates_single_layout.xml
+++ b/app/src/main/res/layout/order_updates_single_layout.xml
@@ -3,14 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="22dp"
-    android:gravity="center_vertical">
+    android:layout_marginTop="22dp">
 
 
     <ImageView
         android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/shoppre_ic"
         android:layout_gravity="top"/>
 
