--- a/app/src/main/res/layout/shipment_comment_single_layout.xml
+++ b/app/src/main/res/layout/shipment_comment_single_layout.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="top"
         android:src="@drawable/shoppre_ic"/>
 
