--- a/app/src/main/res/layout/single_all_delivery_addresses.xml
+++ b/app/src/main/res/layout/single_all_delivery_addresses.xml
@@ -33,7 +33,8 @@
                     android:layout_width="26dp"
                     android:layout_height="22dp"
                     android:layout_marginTop="5dp"
-                    android:padding="0dp" />
+                    android:padding="0dp"
+                    android:buttonTint="#3A5FD8"/>
 
 
                 <LinearLayout
