--- a/app/src/main/res/layout/fragment_empty_address_book.xml
+++ b/app/src/main/res/layout/fragment_empty_address_book.xml
@@ -796,8 +796,9 @@
                                     android:layout_height="wrap_content"
                                     android:text="This number is for delivery purposes only.\nWe will not provide customer service via this phone number."
                                     android:textColor="#F35975"
+                                    android:lineHeight="14.63dp"
                                     android:textFontWeight="500"
-                                    android:textSize="10sp" />
+                                    android:textSize="12sp" />
 
 
                                 <TextView
@@ -805,6 +806,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="18dp"
                                     android:layout_marginBottom="33dp"
+
                                     android:gravity="center_horizontal"
                                     android:text="Note: Enter ‘HOME’ as address type"
                                     android:textColor="@color/black"
