--- a/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
+++ b/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
@@ -576,8 +576,7 @@
                         <CheckBox
                             android:id="@+id/expressProcessingCheckBox"
                             android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical" />
+                            android:layout_height="27dp" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
