--- a/app/src/main/res/menu/three_dots_menu.xml
+++ b/app/src/main/res/menu/three_dots_menu.xml
@@ -30,6 +30,6 @@
     <item
         android:id="@+id/ship_to_india"
         android:textSize="10sp"
-        android:title="SHIP TO INDIA" />
+        android:title="SHIP IN INDIA" />
 
 </menu>
