--- a/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
+++ b/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
@@ -133,10 +133,11 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="24dp"
-                            android:layout_marginTop="24dp"
+                            android:layout_marginTop="23dp"
                             android:layout_weight="1"
                             android:text="Locker"
                             android:textColor="@color/black"
@@ -147,7 +148,7 @@
                         <com.google.android.material.button.MaterialButton
                             android:layout_width="wrap_content"
                             android:layout_height="27dp"
-                            android:layout_marginTop="19dp"
+                            android:layout_marginTop="23dp"
                             android:layout_marginRight="24dp"
                             android:layout_marginBottom="5dp"
                             android:insetTop="0dp"
@@ -168,32 +169,36 @@
                         android:layout_width="96dp"
                         android:layout_height="96dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="65dp"
+                        android:layout_marginTop="131dp"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/view_photo_blurred" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="24dp"
                         android:text="Looks like your locker is empty!"
                         android:textColor="@color/black"
-                        android:textFontWeight="500"
+                        android:textFontWeight="400"
                         android:textSize="14sp" />
 
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/placeAnOrderBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="19dp"
+                        android:layout_marginTop="18dp"
+                        android:paddingVertical="14dp"
                         android:paddingHorizontal="65dp"
                         android:text="Place an Order"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textFontWeight="700"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         app:backgroundTint="#17B28F"
-                        app:cornerRadius="5dp" />
+                        app:cornerRadius="5dp"
+                        android:letterSpacing="0.03"/>
 
                     <LinearLayout
                         android:id="@+id/emptyLockerDiscardText"
