--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -70,9 +70,10 @@
                         android:textColor="@color/black"/>
 
                     <TextView
+                        android:id="@+id/virtualAddressName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nikita Shanker"
+                        android:text=""
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18sp"
