--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -132,6 +132,7 @@
                             </LinearLayout>
 
                             <TextView
+                                android:id="@+id/tvDownloadInvoice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
